package com.myself.nettychat.bootstrap;


public interface BaseAuthService {

    boolean  authorized(String username,String password);

}
