@startuml

title __BOOTSTRAP's Class Diagram__\n

  package com.myself.nettychat {
    package com.myself.nettychat.bootstrap {
      abstract class AbstractBootstrapServer {
          - PROTOCOL : String
          - SERVER_CONTEXT : SSLContext
          {static} - MQTT_CSV_LIST : String
          # initHandler()
          - intProtocolHandler()
          - initSsl()
      }
    }
  }
  

  package com.myself.nettychat {
    package com.myself.nettychat.bootstrap {
      interface BaseApi {
          + doIfElse()
          + doIfElse()
          + doIf()
          + doIfAnd()
          + doIfAnd1()
      }
    }
  }
  

  package com.myself.nettychat {
    package com.myself.nettychat.bootstrap {
      interface BaseAuthService {
          {abstract} + authorized()
      }
    }
  }
  

  package com.myself.nettychat {
    package com.myself.nettychat.bootstrap {
      interface BootstrapServer {
          {abstract} + shutdown()
          {abstract} + setServerBean()
          {abstract} + start()
      }
    }
  }
  

  package com.myself.nettychat {
    package com.myself.nettychat.bootstrap {
      interface ChannelService {
          {abstract} + getMqttChannel()
          {abstract} + connectSuccess()
          {abstract} + suscribeSuccess()
          {abstract} + loginSuccess()
          {abstract} + publishSuccess()
          {abstract} + closeSuccess()
          {abstract} + sendWillMsg()
          {abstract} + getDeviceId()
          {abstract} + unsubscribe()
          {abstract} + doPubrel()
          {abstract} + doPubrec()
      }
    }
  }
  

  package com.myself.nettychat {
    package com.myself.nettychat.bootstrap {
      class NettyBootstrapServer {
          - bossGroup : EventLoopGroup
          - workGroup : EventLoopGroup
          ~ bootstrap : ServerBootstrap
          + getServerBean()
          + setServerBean()
          + start()
          - initEventPool()
          + shutdown()
          - useEpoll()
      }
    }
  }
  

  AbstractBootstrapServer -up-|> BootstrapServer
  NettyBootstrapServer -up-|> AbstractBootstrapServer
  NettyBootstrapServer o-- InitNetty : serverBean


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
